--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "purplemine",
   "description": "A free Redmine 3.0+ theme written in SCSS",
+  "engines": {
+    "node": ">=20.16.0"
+  },
   "keywords": [
     "redmine",
     "theme",
@@ -25,24 +28,25 @@
     "lint": "npm run -S lint:js && npm run -S lint:sass"
   },
   "dependencies": {
-    "@liquid-js/sass-inline-svg": "^2.0.0",
-    "autoprefixer": "^9.8.8",
-    "grunt": "^1.6.1",
-    "grunt-contrib-uglify": "^5.2.2",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-postcss": "^0.9.0",
-    "grunt-sass": "^3.1.0",
-    "sass": "^1.69.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "@liquid-js/sass-inline-svg": "^2.0.0",
+    "@lodder/grunt-postcss": "^3.1.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^4.1.0",
+    "grunt": "^1.6.1",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
+    "postcss": "^8.4.47",
+    "sass": "^1.69.5",
     "stylelint": "^13.13.1",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.21.0"
