--- a/package.json
+++ b/package.json
@@ -27,24 +27,25 @@
     "lint:sass": "stylelint src/sass/**/*.scss",
     "lint": "npm run -S lint:js && npm run -S lint:sass"
   },
-  "devDependencies": {
+  "dependencies": {
     "@liquid-js/sass-inline-svg": "^2.0.0",
-    "@lodder/grunt-postcss": "^3.1.1",
     "autoprefixer": "^10.4.20",
+    "grunt": "^1.6.1",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-contrib-watch": "^1.1.0",
+    "@lodder/grunt-postcss": "^3.1.1",
+    "grunt-sass": "^3.1.0",
+    "sass": "^1.69.5"
+  },
+  "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^4.1.0",
-    "grunt": "^1.6.1",
-    "grunt-contrib-uglify": "^5.2.2",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-sass": "^3.1.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "postcss": "^8.4.47",
-    "sass": "^1.69.5",
     "stylelint": "^13.13.1",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.21.0"
